[gd_scene load_steps=22 format=3 uid="uid://nykjmmd6obaf"]

[ext_resource type="Texture2D" uid="uid://vpnmdmmw8471" path="res://sprites/characters/old_man/base_idle_strip9.png" id="1_1iqil"]
[ext_resource type="Script" uid="uid://bumh2hpyic4fs" path="res://script/old_man.gd" id="1_abjlp"]
[ext_resource type="Texture2D" uid="uid://dk1yem40v8ya0" path="res://sprites/characters/old_man/base_walk_strip8.png" id="2_abjlp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_h8nea"]
radius = 4.47214

[sub_resource type="Animation" id="Animation_6t68o"]
resource_name = "Idle_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Idle:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Idle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Walk:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rl5q2"]
resource_name = "Idle_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Idle:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Idle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Walk:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_d8pdw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Idle:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Idle:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Walk:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Walk:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Idle:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Walk:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_h8nea"]
resource_name = "Walk_left"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Walk:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Walk:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Idle:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_juk0a"]
resource_name = "Walk_right"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Walk:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Idle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Walk:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_juk0a"]
_data = {
&"Idle_left": SubResource("Animation_6t68o"),
&"Idle_right": SubResource("Animation_rl5q2"),
&"RESET": SubResource("Animation_d8pdw"),
&"Walk_left": SubResource("Animation_h8nea"),
&"Walk_right": SubResource("Animation_juk0a")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h8nea"]
animation = &"Idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rl5q2"]
animation = &"Idle_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_2iwb8"]
blend_point_0/node = SubResource("AnimationNodeAnimation_h8nea")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_rl5q2")
blend_point_1/pos = 1.0
value_label = "0"
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nn7mt"]
animation = &"Walk_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ows3w"]
animation = &"Walk_right"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_1150b"]
blend_point_0/node = SubResource("AnimationNodeAnimation_nn7mt")
blend_point_0/pos = -1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_ows3w")
blend_point_1/pos = 1.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sqycd"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2gtr4"]
advance_mode = 2
advance_condition = &"is_moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vrtk0"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_exkd2"]
states/Idle/node = SubResource("AnimationNodeBlendSpace1D_2iwb8")
states/Idle/position = Vector2(357, 98)
states/Walk/node = SubResource("AnimationNodeBlendSpace1D_1150b")
states/Walk/position = Vector2(629, 100)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_sqycd"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_2gtr4"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_vrtk0")]

[sub_resource type="CircleShape2D" id="CircleShape2D_abjlp"]
radius = 18.0

[node name="Old_man" type="CharacterBody2D"]
visible = false
collision_layer = 16
collision_mask = 3
script = ExtResource("1_abjlp")
speed = 20.0

[node name="Idle" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -4)
scale = Vector2(1.2, 1.2)
texture = ExtResource("1_1iqil")
hframes = 9

[node name="Walk" type="Sprite2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_abjlp")
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_h8nea")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_juk0a")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_exkd2")
anim_player = NodePath("../AnimationPlayer")
parameters/conditions/idle = false
parameters/conditions/is_moving = 0.72952
parameters/Idle/blend_position = 0.0422323
parameters/Walk/blend_position = 0

[node name="movement_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_abjlp")
debug_color = Color(0.835509, 0.356613, 0.410919, 0.42)

[connection signal="timeout" from="movement_timer" to="." method="_on_movement_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
